--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -1,121 +1,26 @@
-% break
 \newcommand{\blankbreak}{$ $\\}
 
-% scope
 \newenvironment{scope}{}{}
 
-% statement
 \newtheorem{statement}{}
 \numberwithin{statement}{section}
-% statement :: Definition
 \theoremstyle{definition}
 \newtheorem{definition}[statement]{Definition}
-% statement :: Theorem
 \theoremstyle{plain}
 \newtheorem{theorem}[statement]{Theorem}
-% statement :: Proposition
 \theoremstyle{plain}
 \newtheorem{proposition}[statement]{Proposition}
-% statement :: Corollary
 \theoremstyle{plain}
 \newtheorem{corollary}[statement]{Corollary}
-% statement :: Lemma
 \theoremstyle{plain}
 \newtheorem{lemma}[statement]{Lemma}
-% statement :: Remark
 \theoremstyle{remark}
 \newtheorem{remark}[statement]{Remark}
-% statement :: Example
 \theoremstyle{definition}
 \newtheorem{example}[statement]{Example}
 
-% myparagraph
-\newenvironment{myparagraph}{%
-  %\hspace{\parindent}
-}{}
+\newenvironment{myparagraph}{}{}
 
-% mystatement
-\NewDocumentEnvironment{mystatement}{momo}{%
-  % begin
-  \ifthenelse{\equal{#1}{definition}}{%
-    % \begin{leftbar}%
-    \IfValueTF{#2}{\begin{definition}[#2]}{\begin{definition}}%
-  }{}%
-  \ifthenelse{\equal{#1}{theorem}}{%
-    % \begin{leftbar}%
-    \IfValueTF{#2}{\begin{theorem}[#2]}{\begin{theorem}}%
-  }{}%
-  \ifthenelse{\equal{#1}{proposition}}{%
-    % \begin{leftbar}%
-    \IfValueTF{#2}{\begin{proposition}[#2]}{\begin{proposition}}%
-  }{}%
-  \ifthenelse{\equal{#1}{corollary}}{%
-    % \begin{leftbar}%
-    \IfValueTF{#2}{\begin{corollary}[#2]}{\begin{corollary}}%
-  }{}%
-  \ifthenelse{\equal{#1}{lemma}}{%
-    % \begin{leftbar}%
-    \IfValueTF{#2}{\begin{lemma}[#2]}{\begin{lemma}}%
-  }{}%
-  \ifthenelse{\equal{#1}{remark}}{%
-    \IfValueTF{#2}{\begin{remark}[#2]}{\begin{remark}}%
-  }{}%
-  \ifthenelse{\equal{#1}{example}}{%
-    % \begin{leftbar}%
-    \IfValueTF{#2}{\begin{example}[#2]}{\begin{example}}%
-  }{}%
-  % label
-  \label{#3}%
-  % reference
-  \IfValueT{#4} {%
-    \cite[p.#4]{milnor}
-  }%
-  % break
-  \blankbreak{}%
-} {%
-  % vspace
-  % \vspace{2.5pt}
-  % end
-  \ifthenelse{\equal{#1}{definition}}{%
-    \end{definition}%
-    % \end{leftbar}%
-  }{}%
-  \ifthenelse{\equal{#1}{theorem}}{%
-    \end{theorem}%
-    % \end{leftbar}%
-  }{}%
-  \ifthenelse{\equal{#1}{proposition}}{%
-    \end{proposition}%
-    % \end{leftbar}%
-  }{}%
-  \ifthenelse{\equal{#1}{corollary}}{%
-    \end{corollary}%
-    % \end{leftbar}%
-  }{}%
-  \ifthenelse{\equal{#1}{lemma}}{%
-    \end{lemma}%
-    % \end{leftbar}%
-  }{}%
-  \ifthenelse{\equal{#1}{remark}}{%
-    \end{remark}%
-  }{}%
-  \ifthenelse{\equal{#1}{example}}{%
-    \end{example}%
-    % \end{leftbar}%
-  }{}%
-}
+\NewDocumentEnvironment{mystatement}{momo}{\ifthenelse{\equal{#1}{definition}}{\IfValueTF{#2}{\begin{definition}[#2]}{\begin{definition}}}{}\ifthenelse{\equal{#1}{theorem}}{\IfValueTF{#2}{\begin{theorem}[#2]}{\begin{theorem}}}{}\ifthenelse{\equal{#1}{proposition}}{\IfValueTF{#2}{\begin{proposition}[#2]}{\begin{proposition}}}{}\ifthenelse{\equal{#1}{corollary}}{\IfValueTF{#2}{\begin{corollary}[#2]}{\begin{corollary}}}{}\ifthenelse{\equal{#1}{lemma}}{\IfValueTF{#2}{\begin{lemma}[#2]}{\begin{lemma}}}{}\ifthenelse{\equal{#1}{remark}}{\IfValueTF{#2}{\begin{remark}[#2]}{\begin{remark}}}{}\ifthenelse{\equal{#1}{example}}{\IfValueTF{#2}{\begin{example}[#2]}{\begin{example}}}{}\label{#3}\IfValueT{#4}{\cite[p.#4]{milnor}}\blankbreak{}}{\ifthenelse{\equal{#1}{definition}}{\end{definition}}{}\ifthenelse{\equal{#1}{theorem}}{\end{theorem}}{}\ifthenelse{\equal{#1}{proposition}}{\end{proposition}}{}\ifthenelse{\equal{#1}{corollary}}{\end{corollary}}{}\ifthenelse{\equal{#1}{lemma}}{\end{lemma}}{}\ifthenelse{\equal{#1}{remark}}{\end{remark}}{}\ifthenelse{\equal{#1}{example}}{\end{example}}{}}
 
-% myproof
-\NewDocumentEnvironment{myproof}{o}{%
-  % begin
-  \IfValueTF{#1}{%
-    \begin{proof}[Proof #1.]%
-  } {%
-    \begin{proof}%
-  }
-  % break
-  \blankbreak{}%
-} {%
-  % end
-  \end{proof}%
-}
+\NewDocumentEnvironment{myproof}{o}{\IfValueTF{#1}{\begin{proof}[Proof #1.]}{\begin{proof}}\blankbreak{}}{\end{proof}}
