--- a/src/sections/germ/parts/isomorphism.tex
+++ b/src/sections/germ/parts/isomorphism.tex
@@ -1,5 +1,4 @@
-
-\begin{myparagraph} Let $\bb$ and $\bb'$ be two isomorphic microbundles over $B$. There exists a homeomorphism $\psi: V \isomto V'$ where $V \sub E(\bb)$ is a neighborhood of $i(B)$ and $V' \sub E(\bb')$ is a neighborhood of $i'(B)$. We can view $\psi$ as a representative for a homeomorphism-germ \[ \germdef{[\psi]}{(E, i(B))}{(E', i'(B))}. \]
+\begin{myparagraph} Let $\bb$ and $\bb'$ be two isomorphic microbundles over $B$. There exists a homeomorphism $\psi: V \isomto V'$ where $V \sub E(\bb)$ is a neighborhood of $i(B)$ and $V' \sub E(\bb')$ is a neighborhood of $i'(B)$. We can regard $\psi$ as a representative for a homeomorphism-germ \[ \germdef{[\psi]}{(E, i(B))}{(E', i'(B))}. \]
 
 Studying isomorphy between $\bb$ and $\bb'$ using map-germs is useful because we do not care what $\psi$ does on its initial domain, but only what it does on arbitrary small neighborhoods of $i(B)$. Hence, every representative of $[\psi]$ describes the `same' isomorphy between $\bb$ and $\bb'$. Now, naturally, the question arises whether the existence of a homeomorphism-germ \[ \germdef{F}{(E, i(B))}{(E', i'(B))} \] already implies that $\bb$ and $\bb'$ are isomorphic. The answer is generally no, because isomorphy between microbundles additionally requires the homeomorphism to commute with the injection and projection maps. Hence, we need an extra condition (`fiber-preservation') for this implication to be true. This justifies the following definition.
 
