--- a/src/sections/induced/parts/composition.tex
+++ b/src/sections/induced/parts/composition.tex
@@ -2,4 +2,4 @@
 
 \begin{mystatement}{lemma}{induced::composition} Let $\bundledef{\bc}{C}{E}{i}{j}$ be a microbundle and let $A \xto{f} B \xto{g} C$ be a map diagram. Then the two microbundles \[ \bundledef{\ind{(g \circ f)}\bc}{A}{E_1}{i_1}{j_1} \tand \bundledef{\ind{f}(\ind{g}\bc)}{A}{E_2}{i_2}{j_2} \] are isomorphic. \end{mystatement}
 
-\begin{myproof} First, compare the two total spaces: \begin{itemize} \item $E(\ind{(g \circ f)}) = \{ (a, e) \in A \cross E \mid g(f(a)) = j(e)\}$ \item $E(\ind{f}(\ind{g}\bc)) = \{ (a, b, e) \in A \cross (B \cross E) \mid f(a) = b$ and $ g(b) = j(e) \}$ \end{itemize} We define a homeomorphism $\psi: E(\ind{(g \circ f)}) \isomto E(\ind{f}(\ind{g}\bc))$ with \[ \psi(a, e) = (a, f(a), e) \tand \inv{\psi}(a, b, e) = (a, e) \] which is a homeomorphism since both $\psi$ and $\inv{\psi}$ are component-wise continuous. Commutativity with the injection maps is given by \[ \psi(i_1(a)) = \psi(a, i(g(f(a)))) = (a, f(a), i(g(f(a)))) = i_2(a) \] and with the projection maps by \[ j_1(a, e) = a = j_2(a, f(a), e) = j_2(\psi(a, e)), \] which concludes the proof. \end{myproof}
+\begin{myproof} First, compare the two total spaces: \begin{itemize} \item $E(\ind{(g \circ f)}\bc) = \{ (a, e) \in A \cross E \mid g(f(a)) = j(e)\}$ \item $E(\ind{f}(\ind{g}\bc)) = \{ (a, b, e) \in A \cross (B \cross E) \mid f(a) = b$ and $ g(b) = j(e) \}$ \end{itemize} We define a homeomorphism $\psi: E(\ind{(g \circ f)}) \isomto E(\ind{f}(\ind{g}\bc))$ with \[ \psi(a, e) = (a, f(a), e) \tand \inv{\psi}(a, b, e) = (a, e) \] which is a homeomorphism since both $\psi$ and $\inv{\psi}$ are component-wise continuous. Commutativity with the injection maps is given by \[ \psi(i_1(a)) = \psi(a, i(g(f(a)))) = (a, f(a), i(g(f(a)))) = i_2(a) \] and with the projection maps by \[ j_1(a, e) = a = j_2(a, f(a), e) = j_2(\psi(a, e)), \] which concludes the proof. \end{myproof}
