--- a/src/sections/induced/parts/cone.tex
+++ b/src/sections/induced/parts/cone.tex
@@ -26,7 +26,7 @@ Together with $\ind{(\iota \circ f)}\bb' \cong \ind{f}(\ind{\iota}\bb') \cong \i
 
 Let $\ind{f}\bb$ be trivial.
 
-In contrast to the mapping cone, there exists a natural retraction from the mapping cylinder to its attached space \[ r: B \sqcup_f MA \to B \twith r([a, t]) = f(a). \] The diagram \[ A \cross \{1\} \incl B \sqcup_f MA \xto{r} B \] is equal to $f$ if we consider $A = \cylup{A}$. From $\ind{r}\bb[A \cross \{1\}] = \ind{(r \circ \iota)}\bb = \ind{f}\bb$ it follows that $\ind{r}\bb[A \cross \{1\}]$ is trivial. Furthermore, $\ind{r}\bb[A \cross (\half, 1]]$ is trivial as well due to \myintref{induced::trivial} and the retraction $A \cross (\half, 1] \to \cylup{A}$ with $(a, t) \mapsto (a, 1)$.
+In contrast to the mapping cone, there exists a natural retraction from the mapping cylinder to its attached space \[ r: B \sqcup_f MA \to B \twith r([a, t]) = f(a). \] The diagram \[ A \cross \{1\} \incl B \sqcup_f MA \xto{r} B \] is equal to $f$ if we consider $A = \cylup{A}$. From $\ind{r}\bb[A \cross \{1\}] = \ind{(r \circ \iota)}\bb = \ind{f}\bb$ it follows that $\ind{r}\bb[A \cross \{1\}]$ is trivial. Furthermore, $\ind{r}\bb[A \cross {(\half, 1]}]$ is trivial as well due to \myintref{induced::trivial} and the retraction $A \cross (\half, 1] \to \cylup{A}$ with $(a, t) \mapsto (a, 1)$.
 
 Since $A$ is paracompact hausdorff, we can apply \myintref{microbundle::paracompact}. Hence, there exists a homeomorphism \[ \psi: W \isomto A \cross (\half, 1] \cross \R^n \] where $W$ is a neighborhood of $i_r(A)$ in $E(\ind{r}\bb[A \cross {(\half, 1]}])$. Without loss of generality, we may assume that $W = E(\ind{r}\bb[A \cross {(\half, 1]}])$ by removing a closed subset of $E(\ind{r}\bb[A \cross {(\half, 1]}])$ if necessary and applying \myintref{microbundle::total}.
 
