--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -1,3 +1,3 @@
-\begin{mystatement}{definition}[microbundle]{microbundle::definition}[20] A \defterm{microbundle} $\bb$ over $B$ (with \defterm{fiber dimension} $n$) is a diagram $\bundle{B}{E}{i}{j}$ satisfying the following: \begin{properties} \item $B$ is a topological space (\defterm{base space}) \item $E$ is a topological space (\defterm{total space}) \item $i: B \to E$ (\defterm{injection}) and $j: E \to B$ (\defterm{projection}) are maps such that $j \circ i = id_B$ \item Every $b \in B$ is \defterm{locally trivializable}, that is. there exist open neighborhoods $U \sub B$ of $b$ and $V \sub E$ of $i(U)$ together with a homeomorphism $\phi: V \isomto U \cross \R^n$ such that the following diagram commutes: \[ \begin{tikzcd}[column sep=tiny] \end{tikzcd} \] Note that $\pi_1$ denotes the projection on the first component $(u, x) \mapsto x$. \end{properties} \end{mystatement}
+\begin{mystatement}{definition}[microbundle]{microbundle::definition}[20] A \defterm{microbundle} $\bb$ over $B$ (with \defterm{fiber dimension} $n$) is a diagram $\bundle{B}{E}{i}{j}$ satisfying the following: \begin{properties} \item $B$ is a topological space (\defterm{base space}) \item $E$ is a topological space (\defterm{total space}) \item $i: B \to E$ (\defterm{injection}) and $j: E \to B$ (\defterm{projection}) are maps such that $j \circ i = id_B$ \item Every $b \in B$ is \defterm{locally trivializable}, that is. there exist open neighborhoods $U \sub B$ of $b$ and $V \sub E$ of $i(U)$ together with a homeomorphism $\phi: V \isomto U \cross \R^n$ such that the following diagram commutes: \[ \begin{tikzcd}[column sep=tiny] & V \ar[dr, "j\vert_V"] \ar[dd, "\phi"] & \\ U \ar[ur, "i"] \ar[dr, "{id \cross 0}"'] & & U \\ & U \cross\R^n \ar[ur, "\pi_1"'] & \end{tikzcd} \] Note that $\pi_1$ denotes the projection on the first component $(u, x) \mapsto x$. \end{properties} \end{mystatement}
 
 As usual, the fiber dimension is well-defined due to the Invariance of Dimension Theorem (see\cite[cor.19.10]{brendon}). \begin{mystatement}{remark}{microbundle::dimension} In the following, unless explicitly stated otherwise, we assume the fiber dimension of any given microbundle to be $n$. \end{mystatement}
