--- a/src/sections/normal/parts/transitivity.tex
+++ b/src/sections/normal/parts/transitivity.tex
@@ -1,16 +1,3 @@
+\begin{mystatement}{lemma}{normal::transitivity}[62] Let $P \sub N \sub M$ be a chain of topological submanifolds. There exists a normal microbundle \[ \bundledef{\bn}{P}{U}{\iota}{r} \] of $P$ in $M$ if there exist normal microbundles \begin{center} $\bundledef{\bn_p}{P}{U_N}{\iota_P}{j_P}$ in $N$ and $\bundledef{\bn_n}{N}{U_M}{\iota_N}{j_N}$ in $M$. \end{center} \end{mystatement}
 
-\begin{mystatement}{lemma}{normal::transitivity}[62]
-Let $P \sub N \sub M$ be a chain of topological submanifolds.
-There exists a normal microbundle
-\[ \bundledef{\bn}{P}{U}{\iota}{r} \]
-of $P$ in $M$ if there exist normal microbundles
-\begin{center}
-$\bundledef{\bn_p}{P}{U_N}{\iota_P}{j_P}$ in $N$ and $\bundledef{\bn_n}{N}{U_M}{\iota_N}{j_N}$ in $M$.
-\end{center}
-\end{mystatement}
-
-\begin{myproof}
-We are given a normal microbundle $\bn$ of $P$ in $M$ by
-\[ \bn_p \circ \bn_n\restr{U_N}. \]
-Note that $\iota_N \circ \iota_P$ is just the inclusion $P \incl U_M$.
-\end{myproof}
+\begin{myproof} We are given a normal microbundle $\bn$ of $P$ in $M$ by \[ \bn_p \circ \bn_n\restr{U_N}. \] Note that $\iota_N \circ \iota_P$ is just the inclusion $P \incl U_M$. \end{myproof}
