--- a/src/sections/suspension/parts/theorem.tex
+++ b/src/sections/suspension/parts/theorem.tex
@@ -1,44 +1,9 @@
+\begin{mystatement}{theorem}{suspension::theorem}[71] If $\ba$ and $\bb$ are rooted microbundles over a paracompact hausdorff space $B$, then \[ \whitney{\ind{\phi}(\ba \vee \bb)}{\be{B}} \cong \whitney{\ba}{\bb}. \] \end{mystatement}
 
-\begin{mystatement}{theorem}{suspension::theorem}[71]
-If $\ba$ and $\bb$ are rooted microbundles
-over a paracompact hausdorff space $B$, then
-\[ \whitney{\ind{\phi}(\ba \vee \bb)}{\be{B}} \cong \whitney{\ba}{\bb}. \]
-\end{mystatement}
+\begin{myproof} The previous lemma yields rooted isomorphy $\whitney{\bb}{\be{B}} \cong \whitney{\be{B}}{\bb}$. Hence, \[ \ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\bb}{\be{B}})) \cong \ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\be{B}}{\bb})). \] Furthermore, we have \[ \ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\bb}{\be{B}})) \cong \whitney{\ind{\phi}((\ba \vee \bb))}{(\be{B} \vee \be{B})} \cong \whitney{\ind{\phi}(\ba \vee \bb)}{\be{B}} \] for the left side and \[ \ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\be{B}}{\bb})) \cong \ind{\phi}(\whitney{(\ba \vee \be{B})}{(\be{B} \vee \bb)}) \cong \whitney{\ba}{\bb} \] for the right side of the isomorphy, which completes the proof. \end{myproof}
 
-\begin{myproof}
-The previous lemma yields rooted isomorphy $\whitney{\bb}{\be{B}} \cong \whitney{\be{B}}{\bb}$.
-Hence,
-\[
-\ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\bb}{\be{B}}))
-\cong \ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\be{B}}{\bb})).
-\]
-Furthermore, we have
-\[
-\ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\bb}{\be{B}})) \cong
-\whitney{\ind{\phi}((\ba \vee \bb))}{(\be{B} \vee \be{B})}
-\cong \whitney{\ind{\phi}(\ba \vee \bb)}{\be{B}}
-\]
-for the left side and
-\[
-\ind{\phi}((\whitney{\ba}{\be{B}}) \vee (\whitney{\be{B}}{\bb})) \cong
-\ind{\phi}(\whitney{(\ba \vee \be{B})}{(\be{B} \vee \bb)})
-\cong \whitney{\ba}{\bb}
-\]
-for the right side of the isomorphy, which completes the proof.
-\end{myproof}
+\begin{mystatement}{corollary}{suspension::corollary}[72] The wedge sum $\whitney{\bb}{\ind{r}\bb}$ is trivial. \end{mystatement}
 
-\begin{mystatement}{corollary}{suspension::corollary}[72]
-The wedge sum $\whitney{\bb}{\ind{r}\bb}$ is trivial.
-\end{mystatement}
+\begin{myproof} This follows directly from the previous theorem and the fact that $\ind{\phi}(\whitney{\bb}{\ind{r}\bb})$ is trivial. \end{myproof}
 
-\begin{myproof}
-This follows directly from the previous theorem and
-the fact that $\ind{\phi}(\whitney{\bb}{\ind{r}\bb})$ is trivial.
-\end{myproof}
-
-\begin{myparagraph}
-Finally, the Bouquet Lemma is just \myintref{suspension::corollary} applied to
-a microbundle over a bouquet of spheres.
-Note that a bouquet of $d$-spheres can be regarded
-as a reduced suspension over a bouquet of $(d-1)$-spheres.
-\end{myparagraph}
+\begin{myparagraph} Finally, the Bouquet Lemma is just \myintref{suspension::corollary} applied to a microbundle over a bouquet of spheres. Note that a bouquet of $d$-spheres can be regarded as a reduced suspension over a bouquet of $(d-1)$-spheres. \end{myparagraph}
