--- a/src/sections/whitney/parts/compatibility.tex
+++ b/src/sections/whitney/parts/compatibility.tex
@@ -1,36 +1,9 @@
-\begin{scope}
-\newcommand{\wleft} {
-\ind{f} (\whitney{\bb_1}{\bb_2})
-}
-\newcommand{\wright} {
-\whitney{\ind{f}\bb_1}{\ind{f}\bb_2}
-}
+\begin{scope} \newcommand{\wleft}{\ind{f} (\whitney{\bb_1}{\bb_2})} \newcommand{\wright}{\whitney{\ind{f}\bb_1}{\ind{f}\bb_2}}
 
-\begin{mystatement}{lemma}{whitney::compatibility}
-Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and let $f: A \to B$ be a map.
-The induced microbundle and the Whitney sum are compatible, that is,
-\begin{center}
-$\wleft \cong \wright$.
-\end{center}
-\end{mystatement}
+\begin{mystatement}{lemma}{whitney::compatibility} Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and let $f: A \to B$ be a map. The induced microbundle and the Whitney sum are compatible, that is, \begin{center} $\wleft \cong \wright$. \end{center} \end{mystatement}
 
-\begin{myproof}
-The total space $E(\wleft)$ is defined as
-\[ \{(a, (e_1, e_2)) \in A \cross (E(\bb_1) \cross E(\bb_2)) \mid j_1(e_1) = j_2(e_2) = f(a) \} \]
-and $E(\wright)$ as
-\[ \set{((a_1, e_1), (a_2, e_2)) \in E(\ind{f}\bb_1) \cross E(\ind{f}\bb_2)}{j_1(a_1, e_1) = j(a_2, e_2)}. \]
+\begin{myproof} The total space $E(\wleft)$ is defined as \[ \{(a, (e_1, e_2)) \in A \cross (E(\bb_1) \cross E(\bb_2)) \mid j_1(e_1) = j_2(e_2) = f(a) \} \] and $E(\wright)$ as \[ \set{((a_1, e_1), (a_2, e_2)) \in E(\ind{f}\bb_1) \cross E(\ind{f}\bb_2)}{j_1(a_1, e_1) = j(a_2, e_2)}. \]
 
-We have a homeomorphsim $\psi: E(\wleft) \isomto E(\wright)$ given by
-\[ \psi(a, (e_1, e_2)) = ((a, e_1), (a, e_2)) \]
-with the inverse $\inv{\psi}((a, e_1), (a, e_2)) = (a, (e_1, e_2))$.
-Since both $\psi$ and $\inv{\psi}$ are component-wise continuous,
-$\psi$ is a homeomorphism.
+We have a homeomorphsim $\psi: E(\wleft) \isomto E(\wright)$ given by \[ \psi(a, (e_1, e_2)) = ((a, e_1), (a, e_2)) \] with the inverse $\inv{\psi}((a, e_1), (a, e_2)) = (a, (e_1, e_2))$. Since both $\psi$ and $\inv{\psi}$ are component-wise continuous, $\psi$ is a homeomorphism.
 
-Commutativity with the injection maps is given by
-\[ \psi(i_f(a)) = \psi(a, (i_1(f(a)), i_2(f(a)))) = ((a, i_1(f(a))), (a, i_2(f(a)))) = i_\oplus(a) \]
-and with the projection maps by
-\[ j_f(a, (e_1, e_2)) = a = j_\oplus((a, e_1), (a, e_2)) = j_\oplus(\psi(a, (e_1, e_2))). \]
-Here, $i_f$ and $j_f$ denote the injection and projection for $\wleft$
-and $i_\oplus$ and $j_\oplus$ the injection and projection for $\wright$.
-\end{myproof}
-\end{scope}
+Commutativity with the injection maps is given by \[ \psi(i_f(a)) = \psi(a, (i_1(f(a)), i_2(f(a)))) = ((a, i_1(f(a))), (a, i_2(f(a)))) = i_\oplus(a) \] and with the projection maps by \[ j_f(a, (e_1, e_2)) = a = j_\oplus((a, e_1), (a, e_2)) = j_\oplus(\psi(a, (e_1, e_2))). \] Here, $i_f$ and $j_f$ denote the injection and projection for $\wleft$ and $i_\oplus$ and $j_\oplus$ the injection and projection for $\wright$. \end{myproof} \end{scope}
