--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -19,7 +19,10 @@ Betreut durch Prof. Dr. Markus Banagl
 
 \vspace{0.5cm}
 
-Fakultät für Mathematik und Informatik\\ Ruprecht-Karls-Universität Heidelberg\\ Heidelberg, den 16. Juni 2024
+Ruprecht-Karls-Universität Heidelberg\\ Fakultät für Mathematik und Informatik\\ Im Neuenheimer Feld 205, 69120 Heidelberg
+
+\vspace{0.5cm}
+16. Juni 2024
 \end{large}
 \end{center}
 \end{titlepage}
