--- a/src/defines/parts/text.tex
+++ b/src/defines/parts/text.tex
@@ -1,10 +1,3 @@
-
-\newcommand{\defterm}[1] {
-\emph{#1}
-}
-\newcommand{\myintref}[1] {
-\Cref{#1}
-}
-\newcommand{\extref}[1] {
-[#1]
-}
+\newcommand{\defterm}[1] {\emph{#1}}
+\newcommand{\myintref}[1] {\Cref{#1}}
+\newcommand{\extref}[1] {[#1]}
