--- a/src/sections/germ/parts/williamson.tex
+++ b/src/sections/germ/parts/williamson.tex
@@ -6,7 +6,7 @@ Let $(b_0, x_0) \in B \cross \R^n$ and let $\eps > 0$. Since $g_{b_0}$ is an ope
 
 We claim that there exists a neighborhood $V \sub B$ of $b_0$ such that \[ \abs{g_b(x) - g_{b_0}(x)} < \delta \] for every $b \in V$ and $x \in \clball[\eps][x_0]$.
 
-To show that, consider $\phi(b, x) = g_b(x) - g_{b_0}(x)$. The open set $\inv{\phi}(\ball[\delta])$ is a neighborhood of $\{b_0\} \cross \R^n$ since $\phi(b_0, x) = 0$. Hence, there exist open subsets $V_x \sub B$ and $W_x \sub \R^n$ such that \[ \bigcup_{x \in \clball[\eps][x_0]} V_x \cross W_x \sub \inv{\phi}(\clball[\delta]) \] and $x \in W_x$. Since $\clball[\eps][x_0]$ is compact, there exist $x_1, \dots, x_n \in \clball[\eps][x_0]$ with $\clball[\eps][x_0] \sub \bigcup_{i = 1}^{n} V_{x_i}$. The claim follows with $V = V_{x_1} \cap \dots \cap V_{x_n}$ which is open by forming the intersection over finitely many open sets.
+To show this, consider $\phi(b, x) = g_b(x) - g_{b_0}(x)$. The open set $\inv{\phi}(\ball[\delta])$ is a neighborhood of $\{b_0\} \cross \R^n$ since $\phi(b_0, x) = 0$. Hence, there exist open subsets $V_x \sub B$ and $W_x \sub \R^n$ such that \[ \bigcup_{x \in \clball[\eps][x_0]} V_x \cross W_x \sub \inv{\phi}(\clball[\delta]) \] and $x \in W_x$. Since $\clball[\eps][x_0]$ is compact, there exist $x_1, \dots, x_n \in \clball[\eps][x_0]$ with $\clball[\eps][x_0] \sub \bigcup_{i = 1}^{n} V_{x_i}$. The claim follows with $V = V_{x_1} \cap \dots \cap V_{x_n}$ which is open by forming the intersection over finitely many open sets.
 
 Now we want to apply the previous lemma.
 
