--- a/src/sections/homotopy/parts/lemma3.tex
+++ b/src/sections/homotopy/parts/lemma3.tex
@@ -4,7 +4,7 @@
 
 \begin{myproof} First, we assume a locally finite covering $\{V_\alpha\}$ of open sets where $\bb[\cyl{V_\alpha}]$ is trivial. The existence of such a covering is justified by \myintref{homotopy::lemma2} and paracompactness of $B$.
 
-This cover can be equipped with a partition of unity \[ \lambda_\alpha: B \to \I \twith \supp \lambda_\alpha \sub V_\alpha \] since $B$ is paracompact hausdorff, that is rescaled in way that \[ \max_\alpha(\lambda_\alpha(b)) = 1, \forall b \in B. \] Such a rescaling can be achieved by dividing $\lambda_\alpha$ by $\max_\alpha \lambda_\alpha$ which is well-defined because $\coll{V_\alpha}$ is locally finite and continuous because the $\max$ function is continuous. Also, $\max_\alpha \lambda_\alpha(b) > 0$ since the initial partition of unity adds up to $1$ in every point.
+This cover can be equipped with a Partition of Unity \[ \lambda_\alpha: B \to \I \twith \supp \lambda_\alpha \sub V_\alpha \] since $B$ is paracompact hausdorff, that is rescaled in way that \[ \max_\alpha(\lambda_\alpha(b)) = 1, \forall b \in B. \] Such a rescaling can be achieved by dividing $\lambda_\alpha$ by $\max_\alpha \lambda_\alpha$ which is well-defined because $\coll{V_\alpha}$ is locally finite and continuous because the $\max$ function is continuous. Also, $\max_\alpha \lambda_\alpha(b) > 0$ since the initial Partition of Unity adds up to $1$ in every point.
 
 Now we define a retraction $r_\alpha: \cyl{B} \to \cyl{B}$ with \[ r_\alpha(b, t) = (b, \max(t, \lambda_\alpha(b))). \]
 
