--- a/src/sections/microbundle/parts/trivial.tex
+++ b/src/sections/microbundle/parts/trivial.tex
@@ -1,5 +1,1 @@
-
-\begin{mystatement}{example}[trivial
-microbundle]{microbundle::trivial}[55]
-A microbundle $\bb$ over $B$ is \defterm{trivial} if it is isomorphic to $\be{B}$.
-\end{mystatement}
+\begin{mystatement}{example}[trivial microbundle]{microbundle::trivial}[55] A microbundle $\bb$ over $B$ is \defterm{trivial} if it is isomorphic to $\be{B}$. \end{mystatement}
