--- a/thesis.tex
+++ b/thesis.tex
@@ -14,10 +14,7 @@
 \input{src/sections/microbundle/section}
 \section{Standard Constructions}\label{chapter::constructions}
 \begin{myparagraph}
-This section introduces two standard constructions for microbundles,
-the `induced microbundle' and the `Whitney sum'.
-Both constructions have their vector bundle analogue
-and many results carry over immediately to microbundles.
+This section introduces two standard constructions for microbundles, the `induced microbundle' and the `Whitney sum'. Both constructions have their vector bundle analogue and many results carry over immediately to microbundles.
 \end{myparagraph}
 \subsection*{Induced Microbundles}\label{section::induced}
 \input{src/sections/induced/section}
@@ -25,31 +22,19 @@ and many results carry over immediately to microbundles.
 \input{src/sections/whitney/section}
 \section{The Homotopy Theorem}\label{chapter::homotopy}
 \begin{myparagraph}
-In this section, we will prove the Homotopy Theorem,
-which is a fundamental result over microbundles.
-It states the following.
+In this section, we will prove the Homotopy Theorem, which is a fundamental result over microbundles. It states the following.
 \end{myparagraph}
 \input{src/sections/homotopy/parts/statement}
 \begin{myparagraph}
-In order to prove this theorem,
-we introduce the concept of map-germs
-over microbundles which provide another way
-to think about isomorphy besides \myintref{microbundle::isomorphy}.
+In order to prove this theorem, we introduce the concept of map-germs over microbundles which provides another way to think about isomorphy besides \myintref{microbundle::isomorphy}.
 \end{myparagraph}
 \input{src/sections/germ/section}
 \input{src/sections/homotopy/section}
 \section{Rooted Microbundles and the Bouquet Lemma}\label{chapter::suspension}
 \begin{myparagraph}
-In this section,
-we provide a proof for the Bouquet Lemma stated in \myintref{section::whitney}.
-To this end, we introduce the concept of `rooted microbundles',
-which allows us to define the wedge sum of two microbundles in a precise manner.
-Additionally, we show a version of the Homotopy Theorem
-that is compatible with rooted-microbundles.
+In this section, we provide a proof for the Bouquet Lemma stated in \myintref{section::whitney}. To this end, we introduce the concept of `rooted microbundles', which allows us to define the wedge sum of two microbundles in a precise manner. Additionally, we show a version of the Homotopy Theorem that is compatible with rooted-microbundles.
 
-Throughout this section,
-we assume that every topological space is equipped with an arbitrary base point
-which we will denote with subscript $0$.
+Throughout this section, we assume that every topological space is equipped with an arbitrary base point which we will denote with subscript $0$.
 \end{myparagraph}
 \input{src/sections/rooted/section}
 \input{src/sections/suspension/section}
