--- a/refs.bib
+++ b/refs.bib
@@ -97,7 +97,7 @@
   year      = {1967},
   publisher = {Springer-Verlag}
 }
-@article{sanderson,
+@article{block,
   issn      = {0003486X},
   url       = {http://www.jstor.org/stable/1970591},
   author    = {C. P. Rourke and B. J. Sanderson},
