--- a/thesis.tex
+++ b/thesis.tex
@@ -40,6 +40,7 @@ Throughout this section, we assume that every topological space is equipped with
 \input{src/sections/suspension/section}
 \section{Normal Microbundles and Milnors Theorem}\label{chapter::normal}
 \input{src/sections/normal/section}
+\input{src/outlook}
 \input{src/references}
 \addcontentsline{toc}{section}{References}
 \end{document}
