--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -8,9 +8,13 @@
 
 \begin{LARGE}\textbf{Microbundles on Toplogical Manifolds}\end{LARGE}
 
-\vspace{1cm}
+\vspace*{1cm}
 
-\begin{large}\textbf{Florian Burger, 4229203}\end{large}
+\begin{large}\textbf{Florian Burger, Matrikel-Nr. 4229203}\end{large}
+
+\vspace{0.5cm}
+
+\begin{large}Sommersemester 2024\end{large}
 
 \vfill
 
@@ -22,7 +26,7 @@ Betreut durch Prof. Dr. Markus Banagl
 Ruprecht-Karls-Universität Heidelberg\\ Fakultät für Mathematik und Informatik\\ Im Neuenheimer Feld 205, 69120 Heidelberg
 
 \vspace{0.5cm}
-16. Juni 2024
+22. Juni 2024
 \end{large}
 \end{center}
 \end{titlepage}
