--- a/thesis.tex
+++ b/thesis.tex
@@ -10,6 +10,8 @@
 \section{Introduction}\label{chapter::introduction}
 \subsection*{Motivation}\label{section::motivation}
 \input{src/introduction}
+\subsection*{Conventions}
+Throughout this thesis, we require that every manifold is paracompact and second-countable. Unless explicitly stated, manifolds are not equipped with a differentiable structure. With a submanifold $N \sub M$, we mean an embedded submanifold $N$ in $M$.
 \subsection*{Introduction to Microbundles}\label{section::microbundle}
 \input{src/sections/microbundle/section}
 \section{Standard Constructions}\label{chapter::constructions}
