--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,16 @@
+@article{block,
+  issn      = {0003486X},
+  url       = {http://www.jstor.org/stable/1970591},
+  author    = {C. P. Rourke and B. J. Sanderson},
+  journal   = {Annals of Mathematics},
+  number    = {1},
+  pages     = {1--28},
+  publisher = {Annals of Mathematics},
+  title     = {Block Bundles: I},
+  urldate   = {2024-06-05},
+  volume    = {87},
+  year      = {1968}
+}
 @book{brendon,
   title     = {Topology and Geometry},
   pages     = {1-557},
@@ -18,6 +31,15 @@
   title     = {Covering and Imbedding Theorems},
   urldate   = {2024-06-12},
   year      = {1941}
+}
+@book{dugundji,
+  title     = {Topology},
+  author    = {Dugundji, James},
+  publisher = {Allyn and Bacon},
+  pages     = {xvi, 447 pages ; 24 cm},
+  series    = {Allyn and Bacon series in advanced mathematics},
+  year      = 1966,
+  address   = {Boston}
 }
 @article{hanner,
   title     = {Some theorems on absolute neighborhood retracts},
@@ -46,6 +68,19 @@
   number  = {1},
   pages   = {257--270},
   year    = {1960}
+}
+@article{kister,
+  issn      = {0003486X, 19398980},
+  url       = {http://www.jstor.org/stable/1970498},
+  author    = {J. M. Kister},
+  journal   = {Annals of Mathematics},
+  number    = {1},
+  pages     = {190--199},
+  publisher = {[Annals of Mathematics, Trustees of Princeton University on Behalf of the Annals of Mathematics, Mathematics Department, Princeton University]},
+  title     = {Microbundles are Fibre Bundles},
+  urldate   = {2024-06-21},
+  volume    = {80},
+  year      = {1964}
 }
 @article{kuczma,
   title     = {An introduction to the theory of functional equations and inequalities},
@@ -88,6 +123,16 @@
   volume    = {64},
   year      = {1956}
 }
+@article{regular,
+  title     = {Simplicial spaces, nuclei and m-groups},
+  author    = {Whitehead, John Henry Constantine},
+  journal   = {Proceedings of the London mathematical society},
+  volume    = {2},
+  number    = {1},
+  pages     = {243--327},
+  year      = {1939},
+  publisher = {Oxford University Press}
+}
 @article{rourke,
   title     = {An embedding without a normal microbundle},
   author    = {Rourke, Colin P and Sanderson, Brian J},
@@ -96,19 +141,6 @@
   pages     = {293--299},
   year      = {1967},
   publisher = {Springer-Verlag}
-}
-@article{block,
-  issn      = {0003486X},
-  url       = {http://www.jstor.org/stable/1970591},
-  author    = {C. P. Rourke and B. J. Sanderson},
-  journal   = {Annals of Mathematics},
-  number    = {1},
-  pages     = {1--28},
-  publisher = {Annals of Mathematics},
-  title     = {Block Bundles: I},
-  urldate   = {2024-06-05},
-  volume    = {87},
-  year      = {1968}
 }
 @article{whitehead,
   title     = {Manifolds with transverse fields in euclidean space},
@@ -125,13 +157,4 @@
   pages     = {1--33},
   year      = {1966},
   publisher = {JSTOR}
-}
-@BOOK{dugundji,
-  title     = "Topology",
-  author    = "Dugundji, James",
-  publisher = "Allyn and Bacon",
-  pages     = "xvi, 447 pages ; 24 cm",
-  series    = "Allyn and Bacon series in advanced mathematics",
-  year      =  1966,
-  address   = "Boston"
 }
