--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -2,7 +2,7 @@
 
 The tangent space allows for the definition of the tangent bundle \[ TM = \bigsqcup_{p \in M} T_p M\] together with the projection \[ TM \xto{\pi} M, \pi(p, \nu) = p. \]
 
-Suppose we want to define the tangent bundle over a topological manifold $M$. As we can see from the two ways of defining the tangent space, the tangent bundle requires the notion of differentiability. One could try to equip the given topological manifold with a differentiable structure and use the same construction as for smooth manifolds. However, M. Kervaire showed in 1960 that there exists a $10$-dimensional topological (even piecewise-linear) manifold that does not admit any differentiable structure \cite{kervaire}. Furthermore, even if there exists a differentiable structure for our topological manifold, it is generally not unique. The $7$-sphere for example admits multiple different differentiable structures (see \cite{milnor7sphere}).
+Suppose we want to define the tangent bundle over a topological $d$-manifold $M$. As we can see from the two ways of defining the tangent space, the tangent bundle requires the notion of differentiability. One could try to equip the given topological manifold with a differentiable structure and use the same construction as for smooth manifolds. However, M. Kervaire showed in 1960 that there exists a $10$-dimensional topological (even piecewise-linear) manifold that does not admit any differentiable structure \cite{kervaire}. Furthermore, even if there exists a differentiable structure for our topological manifold, it is generally not unique. The $7$-sphere for example admits multiple different differentiable structures (see \cite{milnor7sphere}).
 
 Hence, we need to take a different approach than the one for the smooth case.
 
@@ -10,7 +10,7 @@ One plausible approach would be to define the fibers of the tangent bundle to be
 
 In 1964, John Milnor published `Microbundles, Part I', introducing a unique way to think about tangent bundles over topological manifolds.
 
-The core idea behind this approach is to drop the assumption that the tangent bundle is a vector bundle and hence every fiber must be homeomorphic to Euclidean space. Instead, we require that the fibers are `germs' of Euclidean space, i.e, topological spaces that have an open subset homeomorphic to Euclidean space. In contrast to the previous approach, we can now choose the neighborhoods $U_p$ of $p$ regardless of any corresponding charts. That is because we do not require anymore that these neighborhoods are Euclidean spaces. Moreover, each neighborhood of $p$ contains the domain of a chart, hence satisfying our `germ' condition.
+The core idea behind this approach is to drop the assumption that the tangent bundle is a vector bundle and hence every fiber must be homeomorphic to Euclidean space. Instead, we require that the fibers are `germs' of Euclidean space, i.e, topological spaces that contain an open subset homeomorphic to Euclidean space. In contrast to the previous approach, we can now choose the neighborhoods $U_p$ of $p$ regardless of any corresponding charts. That is because we do not require anymore that these neighborhoods are Euclidean spaces. Moreover, each neighborhood of $p$ contains the domain of a chart, hence satisfying our `germ' condition.
 
 If the respective neighborhoods can be chosen freely, we may as well always choose the entire space $M$ for the sake of simplicity.
 
@@ -20,6 +20,6 @@ In order to develop this approach, Milnor introduces a new type of bundle that g
 
 The theory of microbundles over topological manifolds reaches even further, allowing for the definition of a microbundle analogue to the normal bundle. Given a smooth submanifold $P \sub M$, there always exists a normal bundle $NP$ defined fiber-wise by \[ N_p P = T_p M / T_p N. \] In contrast to this, the two mathematicians C. Rourke and B. Sanderson could construct a $19$-dimensional manifold embedded in $S^{29}$ that does not admit a normal microbundle \cite{rourke}. So the existence of a normal microbundle of a submanifold $N \sub M$ is not guaranteed. Instead, Milnor could show that there always exists a normal microbundle of $N$ in a stabilization $M \cross \R^q$ for some $q \in \N$ (see Milnors \myintref{normal::milnor}).
 
-The question of an analogue to the tangent bundle for topological manifolds is not only of theoretical interest. Milnors studies on microbundles allowed Robert Williamson to transfer results in cobordism theory developed by Réne Thom, in particular the concept of transverse regularity, from the smooth category over to the piecewise category (see \cite[§3]{williamson}).
+The question of an analogue to the tangent bundle for topological manifolds is not only of intrinsic interest. Milnors studies on microbundles allowed Robert Williamson to transfer results in cobordism theory developed by Réne Thom, in particular the concept of transverse regularity, from the smooth category over to the piecewise category (see \cite[§3]{williamson}).
 
 This thesis presents the concept of microbundles as introduced in 1964 by John Milnor, providing a proof for the above theorem about the existence of normal microbundles. It is based on Milnors paper `Microbundles, Part I'. \end{myparagraph}
