--- a/src/outlook.tex
+++ b/src/outlook.tex
@@ -1,34 +1,45 @@
 \section{Outlook}\label{chapter::outlook}
+\subsection*{Block bundles}
 \begin{myparagraph}
     Now that we have seen that Milnors Theorem holds,
-    one may ask whether we can do better than this.
-    Can we prove the existence of normal microbundles without having to stabilize
-    the ambient manifold? As already mentioned in \myintref{section::motivation},
-    Rourke and Sanderson found a submanifold that does not admit a normal microbundle
-    in its ambient manifold.
-    So in the theory of microbundles, one can not do substantially better.
+    one may ask whether a stabilization of the surrounding manifold is even necessary.
+    As mentioned in \myintref{section::motivation},
+    Rourke and Sanderson constructed a submanifold that does not admit a normal microbundle
+    in its surrounding manifold.
+    So within the theory of microbundles, we can not significantly improve the results from Milnors Theorem.
 
-    When we broaden our view,
-    one can indeed develop a bundle-theory over non-smooth manifolds
-    where the existence of a normal bundle is garantueed.
-    However, this is not free.
-    Rourke and Sanderson developed a theory of so called `block bundles'.
-    They are defined over simplicial complexes:
+    But what if we look beyond the theory of microbundles.
+    Is there some other approach to define a tangent bundle over topological manifolds
+    without the need for a stabilization in order to guarantee the existence of a normal bundle?
+
+    In 1968, Rourke and Sanderson developed a theory of so called `block bundles',
+    that are defined over simplicial complexes (see \cite{block}).
     
     Given a simplicial complex $K$, then a \defterm{q-block bundle} $\xi^q/K$
-    consists of a total space $E(\xi)$ with $\abs{K} \sub E(\xi)$ such that
+    is defined by a total space $E(\xi)$ with $\abs{K} \sub E(\xi)$ such that
     there exists a collection of \defterm{blocks} $\coll{\beta_i}$ satisfying the following:
     \begin{itemize}
-        \item for each $n$-cell $\sigma \in K$, there exists a block $\beta_i$, such that $(\beta_i, \sigma) \cong (I^{n + q}, I^n)$.
-        \item $E(\xi) = \bigcup_{i} \beta_i$
-        \item $i \neq j \implies \inner{\beta_i} \cap \inner{\beta_j} = \emptyset$
+        \item Every block $\beta_i$ corresponds to a $n$-cell $\sigma_i \in K$ in a way that
+        \begin{center}
+            $(\beta_i, \sigma_i) \cong (\I^{n + q}, \I^n)$.
+        \end{center}
+        \item The blocks cover the entire total space $E(\xi)$.
+        \item The interior of any two different blocks are disjoint.
         \item $\beta_i \cap \beta_j$ is the union of the blocks of the faces for $\sigma_i \cap \sigma_j$.
     \end{itemize}
 
-    The normal block bundle over a PL-submanifold $M \sub N$ can now be defined to be a block bundle $\eta/K$ such that $E(\eta) = N$.
-    Theorem 4.3a) in \cite{block} then states that every compact PL-submanifold $M \sub N$ admits a normal block bundle.
-    
-    So block bundles do not require a stabilization.
+    A normal block bundle over a PL-submanifold $M \sub N$ is defined to be a block bundle $\eta/K$ such that $E(\eta) = N$.
+    Theorem 4.3a in `block bundles I' \cite{block} then states that every compact PL-submanifold $M \sub N$, with a locally flat and proper embedding, admits a normal block bundle.
+    To prove this, Rourke and Sandersan utilize the regular neighborhood theorem in \cite[p.293]{regular} and the construction of dual complexes.
+
+    So in this theory, the existence of normal block bundles is guaranteed without the need for a stabilization.
     However, this comes to the major cost that block bundles are not equipped with a projection map.
-    So if we want the existence of normal bundle, we would have to sacrifice the existence of a projection map.
+    Thus, for block bundles, the existence of a normal bundle is attained at the expense of the projection map.
+\end{myparagraph}
+\subsection*{Fiber bundles}
+\begin{myparagraph}
+    In order to construct the tangent microbundle, we gave up on the requirement that the bundle is a vector bundle or even a fiber bundle.
+    Suprisingly, in 1964 J. Kister could show that every microbundle $\bundledef{\bb}{B}{E}{i}{j}$ has a restriction $\bb[E']$ such that $E' \xto{j\restr{E'}} B$ is a fiber bundle (see \cite{kister}).
+    The fibers are Euclidean and the structural group is the set of all based homeomorphisms $(\R^n, 0) \isomto (\R^n, 0)$.
+    This is an extraordinary result. It makes microbundles a very natural analogue to vector bundles in the topological and piecewise category.
 \end{myparagraph}
