--- a/src/sections/microbundle/section.tex
+++ b/src/sections/microbundle/section.tex
@@ -1,3 +1,3 @@
 \begin{myparagraph} This subsection introduces the concept of microbundles along with some basic properties. We clarify what a microbundle is, what it means for a microbundle to be trivial and cover some basic examples of microbundles, including the tangent microbundle over topological manifolds.
 
-Throughout this thesis, we require that every manifold is paracompact and second-countable. Unless explicitly stated, manifolds are not equipped with a differentiable structure. \end{myparagraph} \input{src/sections/microbundle/parts/definition} \input{src/sections/microbundle/parts/local} \input{src/sections/microbundle/parts/isomorphy} \input{src/sections/microbundle/parts/totalspace} \input{src/sections/microbundle/parts/trivial} \input{src/sections/microbundle/parts/paracompact} \input{src/sections/microbundle/parts/underlying} \input{src/sections/microbundle/parts/tangent} \input{src/sections/microbundle/parts/equivalence}
+\end{myparagraph} \input{src/sections/microbundle/parts/definition} \input{src/sections/microbundle/parts/local} \input{src/sections/microbundle/parts/isomorphy} \input{src/sections/microbundle/parts/totalspace} \input{src/sections/microbundle/parts/trivial} \input{src/sections/microbundle/parts/paracompact} \input{src/sections/microbundle/parts/underlying} \input{src/sections/microbundle/parts/tangent} \input{src/sections/microbundle/parts/equivalence}
