--- a/src/sections/normal/parts/milnor.tex
+++ b/src/sections/normal/parts/milnor.tex
@@ -4,7 +4,7 @@
 
 \begin{myproof} We assume that $M$ is embedded in Euclidean space $\R^{2m + 1}$ \cite[p.60]{dimension}. Additionally, let $V$ be an open neighborhood of $N$ in $M$ together with a retraction $r: V \to N$.
 
-We show the theorem in multiple steps. \begin{steps} \item $N$ has a normal microbundle $\eta$ in $M$ such that $\whitney{\bt_N}{\eta} \cong \be[q]{N}$
+We show the theorem in multiple steps. \begin{steps} \item $N$ has a normal microbundle $\eta$ in $E(\ind{r}\bt_N)$ such that $\whitney{\bt_N}{\eta} \cong \be[q]{N}$
 
 Consider the extension $\ind{r}\bt_N$ for $\bt_N$. Since $V$ is an open set, it's a simplicial complex. Hence, we can apply \myintref{whitney::theorem} to $\ind{r}\bt_N$ to obtain a microbundle $\eta'$ such that $\whitney{\ind{r}\bt_N}{\eta'} \cong \be[q]{V}$.
 
